# ximula

./: .gitignore  CMakeLists.txt  README.md  make.sh
src/: CMakeLists.txt  main.cpp
src/circuit/: CMakeLists.txt  wire.cpp
src/circuit/include/: wire.hpp
tests/: CMakeLists.txt
